tests/parsing/extra_spaces_at_line_end/stderr.golden
error: extra 5 spaces at line end
bus.fbd +2:11
   |
 2 |   C config     
   |           ^^^^^
